@@ -9,6 +9,7 @@ ver 0.23 (not yet released)
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
   - proxy: split search into chunks to avoid exceeding the output buffer
+  - simple: add option to hide CUE target songs
   - upnp: support libnpupnp instead of libupnp
 * archive
   - zzip, iso9660: ignore file names which are invalid UTF-8
